--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<button onclick="demo3()">kiem tra</button>
+<button onclick="vehinhchunhat()">kiem tra</button>
 <script src="js.js"></script>
 </body>
 </html>
